Navbar and Banner finalized

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="/Home/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
     <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -15,6 +15,32 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav>
+        <div class="nav-wrapper white">
+                <div class="container">
+                <img src="../assets/images/LOGO.svg" class="brand-logo">
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="#" class="btn" >Início</a></li>
+                    <li><a href="#">SOBRE</a></li>
+                    <li><a href="#">CONTATO</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+     <!-- Banner -->
+    <div class="row">
+        <div class="col s12" id="banner">
+            <div class="container">
+                <h2 class="white-text">Título</h2>
+                <p class="white-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. <br>
+                    Velit officia consequat duis enim velit mollit.<br>
+                    Exercitation veniam consequat sunt nostrud amet.</p>
+
+            </div>         
+        </div>     
+      </div>
+  
 </body>
 </html>
