--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -7,7 +7,7 @@
 
        <!-- CSS -->
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-       <link rel="stylesheet" href="/Sobre/style.css">
+       <link rel="stylesheet" href="../assets/css/style.css">
    
        <!-- JavaScript -->
        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
