--- a/Front-End/pages/Contato/index.html
+++ b/Front-End/pages/Contato/index.html
@@ -1,24 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Title -->
-    <title>Contato</title>
+    <title>Home</title>
 </head>
-
 <body>
+    <!-- Navbar -->
+   <div class="container" id="nav-container">
+    <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+            <img src="../assets/images/LOGO.svg" width="260" height="290" class="d-inline-block align-top" alt="">           
+          </a>
+          <div class="collapse navbar-collapse justify-content-end" id="nav-layout">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                
+              <a class="nav-link" href="../Home/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="../Contato/index.html">Contato<span class="sr-only">(Página atual)</span></a>
+            </li>
+          </ul>
+          </div>
+          </div>
+        </nav>
+    </div>
 
+      <!--Footer-->
+      <div class="footer-dark ">
+        <footer>
+            <div class="container ">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <ul>
+                            <li>
+                        <a class="align-top" href="#">
+                            <img src="../assets/images/Logo footer.svg" width="160" height="190" class="d-inline-block align-top" alt="">           
+                        </a>
+                    </li>  
+                          </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Localização</h3>
+                        <ul>
+                            <p>Edifício central sala 112 setor central do Gama</p>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>Sobre nós</h3>
+                        <p>Amet minim mollit non deserunt 
+                            ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis
+                            enim velit mollit. Exercitation veniam 
+                            consequat sunt nostrud amet.</p>
+                    </div>
+                    <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                </div>
+                <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
+            </div>
+        </footer>
 </body>
-
 </html>
