Implmentação Dos Card de Formulario e Maps

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <div class='row'>
-        <div class='col-3'>
+        <!-- <div class='col-3'>
             <div class="registration-form">
                 <form>
                     <div class="form-icon">
@@ -91,7 +91,7 @@
                     </div>
                 </form>
             </div>
-        </div>
+        </div> -->
 
         <div class='col-6'>
             <div class="registration-form">
@@ -190,40 +190,3 @@
 </script>
 
 </html>
-<!-- Inspiração figma -->
-<!-- <div class="row">
-        <div class="col s4">
-            <div class="row">
-                <div class="col s12" id="tos">
-                    <form class="card" action="post" id="card-form">
-                        <img src="../assets/images/apoio-suporte.jpg" class="brand-logo">
-                        <h3 class="text-center">Envie uma mensagem para nós</h3>
-                        <p>Preencha as informações básicas abaixo para que possamos entrar em contato com a melhor
-                            solução para o seu sonho!
-                        </p>
-                        <br><br><br><br>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="nome" type="text" class="text-darken-4">
-                                <label for="email">Nome</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="input-field1" type="email" class="validate">
-                                <label for="email">Email</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="telefone" type="text" class="validate">
-                                <label for="telefone">Telefone</label>
-                            </div>
-                        </div>
-                        <button class="waves-effect waves-light btn">Enviar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div> -->
-<!-- fim figma code -->
