--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -43,7 +43,51 @@
         </nav>
     </div>
 
-    <p>teste</p>
+    <div class="container">
+      <div class="row justify-content-between" id="row1">
+     
+        <div class="col-3 col-sm-12 col-md-3">
+          <h2>Visão</h2>
+          <img src="../assets/images/logo visao.svg" class="img_fluid">
+        </div>
+        <div class="col-3 col-sm-12 col-md-3">
+          <h2>Missão</h2>
+          <img src="../assets/images/missao logo.svg" class="img_fluid">
+        </div>
+        <div class="col-3  col-md-3">
+          <h2>Valores</h2>
+          <img src="../assets/images/valores logo.svg" class="img_fluid">
+        </div>
+        
+      </div>
+      <div class="row" id="row2">
+        <div class="col">
+          <h2>Visão</h2>
+          <p>Ser uma empresa inovadora que oferece diversas opções de imóveis visando sempre atender a necessidade do cliente e inspirar paixão e principalmente satisfação para todos.</p>
+        </div>
+        <div class="col">
+        <img src="../assets/images/Visão.svg" width="590" height="410" alt="">
+        </div>
+      </div>
+      <div class="row" id="row2">
+        <div class="col">
+          <h2>Missão</h2>
+          <p>Ser uma empresa obstinada em prever e atender as necessidades dos clientes proporcionando serviços, vistorias e avaliações feitas por engenheiros com o intuito de proporcionar imóveis com muito conforto, bem posicionado em áreas comerciais pensando sempre no lazer e na utilidade para o cliente.</p>
+        </div>
+        <div class="col">
+        <img src="../assets/images/Missão.svg" width="590" height="410" alt="">
+        </div>
+      </div>
+      <div class="row" id="row2">
+        <div class="col">
+          <h2>Valores</h2>
+          <p>Preços competitivos, honestidade, atendimento diferenciado, respeito, dedicação e sustentabilidade.</p>
+        </div>
+        <div class="col">
+        <img src="../assets/images/Valores.svg" width="590" height="410" alt="">
+        </div>
+      </div>
+      </div>
 
       <!--Footer-->
       <div class="footer-dark ">
