--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -114,6 +114,40 @@
     <div class="col4"></div>
 </section>
 
+<!-- Nossa Proposta -->
+<div class="proposta">
+    <div class="container" id="container-prop">
+        <div class="row justify-content-between" id="card-prop">
+
+            <div class="col container-card-test">
+                <div class="container-cards">
+                    <div id="card-container-imagem"><img src="../assets/images/clipboard.svg" class="img_fluid" id="img2"></div>
+                    <div id="card-container-nome"><h2>Compromisso com o cliente</h2></div>
+                </div>  
+            </div>
+            <div class="col container-card-test">
+                <div class="container-cards">
+                    <div id="card-container-imagem"><img src="../assets/images/lampada-de-ideia.svg" class="img_fluid" id="img2"></div>
+                    <div id="card-container-nome"><h2>Idéias inovadoras para a acomodação e satisfação do cliente</h2></div>
+                </div>  
+            </div>
+            <div class="col container-card-test">
+                <div class="container-cards">
+                    <div id="card-container-imagem"><img src="../assets/images/bolsa-de-dinheiro.svg" class="img_fluid" id="img2"></div>
+                    <div id="card-container-nome"><h2>Preço que cabe no bolso</h2></div>
+                </div>
+
+              
+            </div>
+
+        </div>
+        </div>
+    <div class="row" id="prop1">
+    </div>
+    <div class="row" id="prop2">
+    </div>
+</div>
+
 <!-- incio card Formulario -->
 <div class='row' id="fundoForm">
     <div class='col-md-7'>
@@ -136,7 +170,7 @@
                     <input type="text" class="form-control item" id="phone-number" placeholder="Telefone">
                 </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-block create-account">Enviar</button>
+                    <button type="button" class="btn btn-block create-account" id="button-form">Enviar</button>
                 </div>
             </form>
         </div>
@@ -167,54 +201,59 @@
 <!-- Fim card Formulario -->
 
 <div class='row' id="fundoAzul">
-    <div class='col-md-3'>
-        <div class="card-form">
-            <!-- <img src="../assets/images/quote 2.jpg"> -->
-            <form>
-                <!-- <img src="../assets/images/Person1.jpg"> -->
-                <h1 class="text-center">Felipe </h1>
-                <p>“Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint”</p>
-            </form>
-        </div>
-    </div>
-    <div class='col-md-6'>
-        <div class="card-form">
-            <form>
-                <!-- <img src="../assets/images/Person2.jpg"> -->
-                <h1 class="text-center">Leticia</h1>
-                <p>“Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint”</p>
-            </form>
-        </div>
-    </div>
-    
-        <!-- <div class="col-xl-3 col-sm-6 mb-5">
-            <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://bootstrapious.com/i/snippets/sn-team/teacher-4.jpg" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0">Manuella Nevoresky</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-                <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
+    <div class="container" style="width: 1680px;">
+        <div class="row justify-content-between" id="row-home">
+            <div class="col container-card-test">
+                <img src="../assets/images/quote.svg" alt="aspas" class="card-aspas">
+                <div class="container-cards">
+                    <div id="card-container-imagem"><img src="../assets/images/Gabriel.svg" class="img_fluid" id="img2"></div>
+                    <div id="card-container-nome"><h2>Felipe Scobert</h2></div>
+                </div>
+
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis
+                    enim velit mollit. Exercitation veniam
+                    consequat sunt nostrud amet.
+                </p>
             </div>
-        </div> -->
-    <div class='col-md-3'>
-        <div class="card-form">
-            <form>
-                <!-- <img src="../assets/images/Person3.jpg"> -->
-                <h1 class="text-center">Marcos</h1>
-                <p>“Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint”</p>
-            </form>
+            <div class="col container-card-test">
+                <img src="../assets/images/quote.svg" alt="aspas" class="card-aspas">
+                <div class="container-cards">
+                    <div id="card-container-imagem"><img src="../assets/images/Felipe.svg" class="img_fluid" id="img2"></div>
+                    <div id="card-container-nome"><h2>Andre Santado</h2></div>
+                </div>
+
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis
+                    enim velit mollit. Exercitation veniam
+                    consequat sunt nostrud amet.
+                </p>
+            </div>
+            <div class="col container-card-test">
+                <img src="../assets/images/quote.svg" alt="aspas" class="card-aspas">
+                <div class="container-cards">
+                    <div id="card-container-imagem"><img src="../assets/images/Leticia.svg" class="img_fluid" id="img2"></div>
+                    <div id="card-container-nome"><h2>Vitinha Muller</h2></div>
+                </div>
+
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis
+                    enim velit mollit. Exercitation veniam
+                    consequat sunt nostrud amet.
+                </p>
+            </div>
+
         </div>
     </div>
 </div>
 
-
-
 <!--Footer-->
-<div class="footer-dark ">
+<div class="footer-dark">
     <footer>
-        <div class="container ">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3 item">
                     <ul>
