Media queries max-heigth

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -38,9 +38,11 @@
 <!-- Responsivo-->
     <nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-            <span class="navbar-toggler-icon"></span>
+          <a class="navbar-brand" href="../Home/index.html">
+            <img src="../assets/images/LOGO.svg" width="200" height="90">
+          </a>
+          <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+            <span class="navbar-toggler-icon" ></span>
           </button>
           <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
@@ -116,7 +118,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carousel-inner" id="inner">
         <div class="carousel-item active" id="banner">
             <!--       <img class="d-block w-100" src="..." alt="First slide">-->
         </div>
@@ -160,7 +162,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         </ol>
-        <div class="carousel-inner" id="inner">
+        <div class="carousel-inner" id="inner1">
             <div class="carousel-item active" id="active">
                 <div class="col container-card-test1">
                     <div class="container-cards1">
@@ -243,9 +245,8 @@
 
 <div class="container" id="rowMaster">
     <div class="row">
-        <div class="col">
-            <h1 class="text-center">O que Fazemos?</h1>
-            <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui</p><br><br>
+        <h1 class="text-center">O que Fazemos?</h1>
+        <div class="col-6">
             <p>Ser uma empresa inovadora que oferece diversas opções de imóveis visando sempre atender a necessidade do
                 cliente e inspirar paixão e principalmente satisfação para todos.</p>
         </div>
@@ -256,7 +257,7 @@
 </div>
 
 <div class='row' id="fundoAzul1">
-    <h1 class="text-center" id="pfundo">Informações Gerais</h1>
+    <h1 class="text-center" id="pfundo">Nosso Contato</h1>
 
 </div>
 
